@@ -13,6 +13,10 @@ use Padre::Logger;
 our $VERSION = '0.56';
 our @ISA     = 'Padre::Wx::Menu';
 
+
+
+
+
 #####################################################################
 # Padre::Wx::Menu Methods
 
