@@ -118,9 +118,7 @@ sub new {
 }
 
 sub title {
-	my $self = shift;
-
-	return Wx::gettext('&Help');
+	Wx::gettext('&Help');
 }
 
 sub refresh {
@@ -133,7 +131,6 @@ sub refresh {
 
 	return 1;
 }
-
 
 1;
 
