@@ -42,6 +42,7 @@ Changes for Perl Application Development and Refactoring Environment
       (AZAWAWI)
     - Fixed ticket #845: Fix relative filenames from commandline (SEWI)
     - Added "Open In Command Line" to File menu (AZAWAWI)
+    - Renamed Plugins menus to Tools and moved Preferences into it (ADAMK)
 
 0.56 2010.02.01
     - Plugins may now add their GUI elements to the view menu (SEWI)
